# TunProxy

./: Readme.md
android_app/: build.gradle  gradle.properties
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  dhcp.c  http.c  tun2http.h
android_app/app/src/main/java/tun/proxy/: MainActivity.java  SettingsActivity.java
android_app/app/src/main/res/drawable/: ic_play_arrow.xml  ic_settings_24dp.xml
android_app/app/src/main/res/layout/: content_main.xml
android_app/app/src/main/res/menu/: menu_main.xml
android_app/app/src/main/res/values/: strings.xml  styles.xml
android_app/gradle/wrapper/: gradle-wrapper.properties
